# allow-me

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRDPARTYNOTICES
.github/workflows/: ci.yml  pr.yml
examples/: customizations.rs  evaluate.rs  json.rs  order.rs  vars.rs
src/: builder.rs  errors.rs  lib.rs  matcher.rs  policy.rs  substituter.rs  validator.rs
src/core/: builder.rs  mod.rs
src/policy/: builder.rs  mod.rs
