[package]
authors = ["Vadim Kovalyov <vadim.kovalyov@gmail.com>"]
description = "A json-based authorization policy engine."
edition = "2018"
name = "allow-me"
version = "0.1.0"

[dependencies]
lazy_static = "1"
matches = "0.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
