[package]
name = "allow-me"
version = "0.1.0"
authors = ["Vadim Kovalyov <vadim.kovalyov@gmail.com>"]
description = "A authorization library with json-based policy definition."
documentation = "https://docs.rs/allow-me"
repository = "https://github.com/vadim-kovalyov/allow-me.git"
categories = ["authentication", "configuration"]
keywords = ["authorization", "policy", "acl", "rbac"]
license = "MIT"
exclude = [".gitignore"]
edition = "2018"

[dependencies]
lazy_static = "1"
matches = "0.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
