[package]
name = "allow-me"
version = "0.1.1"
authors = ["Vadim Kovalyov <vadim.kovalyov@gmail.com>"]
description = "An authorization library with json-based policy definition."
documentation = "https://docs.rs/allow-me"
repository = "https://github.com/vadim-kovalyov/allow-me.git"
categories = ["authentication", "config"]
keywords = ["authorization", "policy", "acl", "rbac"]
license = "MIT"
edition = "2018"

include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "src/**/*",
]

[dependencies]
lazy_static = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.3"
bytes = "0.5"
proptest = "0.9"
test-case = "1.0"